--- a/src/app.json
+++ b/src/app.json
@@ -8,7 +8,7 @@
     ],
     "scripts": {
       "dokku": {
-        "predeploy": "apt-get update; apt-get install language-pack-pt -y"
+        "predeploy": "apt-get update; apt-get install language-pack-pt -y; python manage.py compress --force"
       }
     }
 }
