Updating dev.env

--- a/src/dev.env
+++ b/src/dev.env
@@ -7,7 +7,7 @@ THALLES_DB_PW=password
 THALLES_DB_HOST=db
 THALLES_DB_PORT=5432
 
-SECRET_KEY=-8&qk7k((n2$e8(ct#@%%htp@ygd_$2euztpks*jc9un_6)att
+SECRET_KEY=***
 
 EMAIL_HOST=smpt
 EMAIL_PORT=587
